--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{url_for('inicio')}}" style="font-size: 20px; color: rgb(1, 1, 94);">Pagina principal</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('principal') }}" style="font-size: 20px; color: rgb(1, 1, 94);">Página principal</a>
         </li>
 
       </ul>
@@ -31,5 +31,14 @@
 <p>acontinuacion te mostrare donde puedes ingresar para hacer tus tareas pendientes o volverlas a ahcer como antes para practicar</p>
 <a href="{{url_for('principal')}}" class="btn btn-primary">Ir a la pagina de tareas</a>
 </center>
+
+<footer class="bg-dark text-white text-center py-3 mt-4">
+    &copy; 2026 Mi Aplicación de Tareas 
+    esta aplicacion fue echa por un alumno del cetis 61
+    informacion extra
+    contacto al numero:
+    
+    </footer>
+</footer>
 </body>
 </html>
