--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-</head>
-<body>
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+{% extends "base.html" %}
+
+{% block titulo %}Inicio{% endblock %}
+
+{% block contenido %}
+
+   <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid" style="background-color: rgb(102, 241, 200);">
     <img src="imagenes extra/_TREAS_-removebg-preview.png" width="80px" height="80px">
     <a class="navbar-brand" href="#">Tareas!!!
@@ -18,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{ url_for('principal') }}" style="font-size: 20px; color: rgb(1, 1, 94);">Página principal</a>
+         <a class="nav-link active" aria-current="page" href="{{ url_for('principal') }}" style="font-size: 20px; color: rgb(1, 1, 94);">Página principal</a>
         </li>
 
       </ul>
@@ -27,7 +24,9 @@
 </nav>
 
 <p style="font-size: 20px; text-align: center; color: rgb(1, 1, 94);">en esta parte podras revisar tus tareas pendientes para responder y las que ya estan terminadas acontinuacion mostrare tu lista de tareas por realizar claramente son pocas mediante el tiempo agregaremos mas</p>
-
+<p>tareas acontinuacion</p>
+<center>
+<div class="container mt-4">
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
     {% for category, msg in messages %}
@@ -40,10 +39,7 @@
 <!--esta informacion fue propoorcionada por la inteligencia artifical dicha informacion fue investigada por mi y agregada
 aclaro esto por el echo de uso de la ia de la cual me estoy apoyando para agregar cosas o acomodar el codigo las cosas que agrego son minimas
  como por ejemplo infomracion que me falta y la uso para acomodar codigo como las card de las tareas para mayor facilidad en el acceso
- -->
-<center>
-<div class="container mt-4">
-  <!-- Tarea 1 -->
+ en el cual me estoy apoyando ya que mi computadora no me deja introducir el venv y cuando lo trato de ingresar me menciona error-->
   <div class="card mb-3" style="width: 30rem;">
     <div class="card-body">
       <h5 class="card-title">Tarea 1: Capital de Francia</h5>
@@ -56,7 +52,7 @@ aclaro esto por el echo de uso de la ia de la cual me estoy apoyando para agrega
     </div>
   </div>
 
-  <!-- Tarea 2 -->
+
   <div class="card mb-3" style="width: 30rem;">
     <div class="card-body">
       <h5 class="card-title">Tarea 2: Crear una Card en HTML</h5>
@@ -69,7 +65,7 @@ aclaro esto por el echo de uso de la ia de la cual me estoy apoyando para agrega
     </div>
   </div>
 
-  <!-- Tarea 3 -->
+
   <div class="card mb-3" style="width: 30rem;">
     <div class="card-body">
       <h5 class="card-title">Tarea 3: Número en JavaScript</h5>
@@ -83,5 +79,4 @@ aclaro esto por el echo de uso de la ia de la cual me estoy apoyando para agrega
   </div>
 </div>
 </center>
-</body>
-</html>
+{% endblock %}
